# svdquant-kernels

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml
baseline/: README.md
baseline/kernels/: _nvfp4.py
baseline/kernels/gemm_w4a4/: harness.py  ref.py
baseline/kernels/quantize_w4a4_act_fuse_lora/: ref.py
benchmarks/: CMakeLists.txt
cmake/: FindCANN.cmake  cuda_arch.cmake
csrc/: CMakeLists.txt
csrc/common/: CMakeLists.txt
csrc/common/include/svdquant/: dtype.h  macros.h  op_defs.h  tensor.h
csrc/kernels/: CMakeLists.txt
csrc/kernels/fused_svdquant_linear/: README.md
csrc/kernels/fused_svdquant_linear/ascend/: kernel.cpp
csrc/kernels/fused_svdquant_linear/cuda/: kernel.cu
csrc/kernels/fused_svdquant_linear/include/: fused_svdquant_linear.h
csrc/kernels/gemm_w4a4/: README.md
csrc/kernels/gemm_w4a4/ascend/: PLAN.md  kernel.cpp  kernel_device.cpp
csrc/kernels/gemm_w4a4/cuda/: kernel.cu
csrc/kernels/gemm_w4a4/include/: gemm_w4a4.h
csrc/kernels/lowrank_branch/: README.md
csrc/kernels/lowrank_branch/ascend/: kernel.cpp
csrc/kernels/lowrank_branch/cuda/: kernel.cu
csrc/kernels/lowrank_branch/include/: lowrank_branch.h
csrc/kernels/pack_weight_int4/: README.md
csrc/kernels/pack_weight_int4/ascend/: kernel.cpp
csrc/kernels/pack_weight_int4/cuda/: kernel.cu
csrc/kernels/pack_weight_int4/include/: pack_weight_int4.h
csrc/kernels/quantize_act_int4/: README.md
csrc/kernels/quantize_act_int4/ascend/: kernel.cpp
csrc/kernels/quantize_act_int4/cuda/: kernel.cu
csrc/kernels/quantize_act_int4/include/: quantize_act_int4.h
csrc/kernels/w4a4_gemm/: README.md
csrc/kernels/w4a4_gemm/ascend/: kernel.cpp
csrc/kernels/w4a4_gemm/cuda/: kernel.cu
csrc/kernels/w4a4_gemm/include/: w4a4_gemm.h
cute_kernels/: __init__.py
cute_kernels/gemm_w4a4/: README.md  __init__.py  kernel.py  kernel_v0_fa4.py  kernel_v2_fa4.py
docs/: architecture.md  gpu.md  npu.md
docs/kernels/: README.md  gemm_w4a4.md  gemm_w4a4_fa4_v0_bringup.md
scripts/: ascendc_python_wrapper.py  build.sh  env_ascend.sh  modal_app.py  ship.sh
tests/: CMakeLists.txt
triton_kernels/: README.md
triton_kernels/quantize_w4a4_act_fuse_lora/: README.md  kernel.py
