# Per-pod micro-benchmarks. Empty at scaffold time — populate once kernels
# and a test harness exist. Same structure as tests/: one subdir per
# native pod. Triton pods benchmark themselves from Python (see the
# standalone scripts under `tmp/` for the current pattern).

# add_subdirectory(kernels/gemm_w4a4)
